Link image upload with article

--- a/src/app/blog/blog-list/blog-list.component.html
+++ b/src/app/blog/blog-list/blog-list.component.html
@@ -3,6 +3,7 @@
         <li>
             <h2>{{ article.title }}</h2>
             <p>{{ article.content }}</p>
+            <img [src]="article.img.pagehero" alt="{{ article.title }}" />
         </li>
     }
 </ul>
