--- a/src/app/blog/create-article/create-article.component.html
+++ b/src/app/blog/create-article/create-article.component.html
@@ -8,7 +8,7 @@
         <textarea class="form-control" name="content" formControlName="content"></textarea>
     </div>
     <div class="form-group">
-        <label for="author">Image</label>
+        <label for="author">Page Hero Image</label>
         <input type="file" name="image" (change)="onFileSelected($event)" />
     </div>
     <button type="submit" class="btn btn-primary">Create article</button>
