--- a/src/app/blog/create-article/create-article.component.html
+++ b/src/app/blog/create-article/create-article.component.html
@@ -9,7 +9,7 @@
     </div>
     <div class="form-group">
         <label for="author">Page Hero Image</label>
-        <input type="file" name="image" (change)="onFileSelected($event)" />
+        <input type="file" name="image" (change)="onFileSelected($event)" required />
     </div>
     <button type="submit" class="btn btn-primary">Create article</button>
 </form>
