--- a/src/app/pages/article-admin/article-admin.component.html
+++ b/src/app/pages/article-admin/article-admin.component.html
@@ -7,8 +7,8 @@
 <article>
     
     <h2>{{ article()!.title }}</h2>
-    <p>{{ article()!.content }}</p>
-    <img [src]="article()!.img.pagehero" alt="{{ article()!.title }}" />
+    <div [innerHTML]="article()!.content | sanitizeHtml"></div>
+    <img [src]="article()!.img.pageHero" alt="{{ article()!.title }}" />
     
 </article>
 }
