Add posibility to save editor images and upd delete article

--- a/src/app/blog/article-editor/article-editor.component.html
+++ b/src/app/blog/article-editor/article-editor.component.html
@@ -12,4 +12,5 @@
         <angular-editor name="content" [placeholder]="'Enter text here...'" [(ngModel)]="content" [config]="editorConfig"></angular-editor>
     </div>
     <button type="submit" class="btn btn-primary">Save</button>
+    <button type="button" class="btn btn-secondary" (click)="onCancel()">Cancel</button>
 </form>
