--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -5,6 +5,7 @@
         <button (click)="onLogout()">Logout</button>
         <a routerLink="/admin">Admin Panel</a>
     }
+    <app-lang-switcher />
 </header>
 
 <app-admin-tools [paramNodeId]="paramNodeId()" />
