--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,5 +1,5 @@
 <app-header />
 
-<h1>Home page</h1>
+<h1 i18n="site header|An introduction header for this sample@@homepage.headline">Home page</h1>
 
 <app-blog-list />
