--- a/src/app/lang-switcher/lang-switcher.component.html
+++ b/src/app/lang-switcher/lang-switcher.component.html
@@ -1,3 +1,3 @@
-<button (click)="changeLanguage('en')">EN</button>
-<button (click)="changeLanguage('ru')">RU</button>
-<button (click)="changeLanguage('uk')">UK</button>
+<button (click)="changeLanguageHandler('en')">EN</button>
+<button (click)="changeLanguageHandler('ru')">RU</button>
+<button (click)="changeLanguageHandler('uk')">UK</button>
