Fix untranslated content

--- a/src/app/blog/blog-list/article-preview/article-preview.component.html
+++ b/src/app/blog/blog-list/article-preview/article-preview.component.html
@@ -1,5 +1,5 @@
 <li>
     <a [routerLink]="['/blog', article().id]">
-        <h2>{{ article().title[langSwitcherService.lang()] }}</h2>
+        <h2>{{ articleTitle() }}</h2>
     </a>
 </li>
