--- a/src/app/blog/article-editor/article-editor.component.html
+++ b/src/app/blog/article-editor/article-editor.component.html
@@ -6,10 +6,12 @@
         </select>
         <span>{{ langSwitcherService.editorLang() }}</span>
     </div>
+
     <div class="form-group">
         <label for="title">Title</label>
         <input type="text" class="form-control" name="title" [(ngModel)]="titleField" (ngModelChange)="onTitleFieldChange()" >
     </div>
+
     <div class="form-group">
         <label for="author">Page Hero Image</label>
         @if (pageHeroPath) {
@@ -18,8 +20,8 @@
         } @else {
             <input type="file" name="image" (change)="onPageHeroSelected($event)" />
         }
-        
     </div>
+
     <div class="form-group">
         <label for="content">Content</label>
         <angular-editor
@@ -30,10 +32,31 @@
             (ngModelChange)="onContentFieldChange()"
         ></angular-editor>
     </div>
+
     <div class="form-group">
         <input type="checkbox" id="published" name="is-published" [(ngModel)]="published" />
         <label for="published">Published</label>
     </div>
-    <button type="submit" class="btn btn-primary">Save</button>
-    <button type="button" class="btn btn-secondary" (click)="onCancel()">Cancel</button>
+
+    <div class="form-group">
+        @for(tag of tagsList(); track tag.id) {
+            <input type="checkbox" id="tag{{ tag.id }}" name="tag{{ tag.label.en }}" [(ngModel)]="tag.selected" />
+            <label for="tag{{ tag.id }}">{{ tag.label[langSwitcherService.editorLang()] }}</label>
+        }
+    </div>
+    
+    <div class="form-group">
+        <label for="author">Author</label>
+        <input id="author" type="text" class="form-control" name="author" [(ngModel)]="author" />
+    </div>
+
+    <div class="form-group">
+        <label for="date">Creation Date</label>
+        <input id="date" type="date" class="form-control" name="date" [(ngModel)]="date" />
+    </div>
+
+    <div class="form-group">
+        <button type="submit" class="btn btn-primary">Save</button>
+        <button type="button" class="btn btn-secondary" (click)="onCancel()">Cancel</button>
+    </div>
 </form>
