--- a/src/app/lang-switcher/lang-switcher.component.html
+++ b/src/app/lang-switcher/lang-switcher.component.html
@@ -1,3 +1,14 @@
-<button (click)="changeLanguageHandler('en')">EN</button>
-<button (click)="changeLanguageHandler('ru')">RU</button>
-<button (click)="changeLanguageHandler('uk')">UK</button>
+<div class="lang-switcher">
+  <p class="lang-switcher__current" (click)="toggleSwitcherHandler()">
+    {{ langSwitcherService.lang() }}
+  </p>
+  <ul class="lang-switcher__list" [class.open]="openSwitcher()">
+    @for (lang of langSwitcherService.langList; track lang) {
+    <li class="lang-switcher__item">
+      <button class="lang-switcher__btn" (click)="changeLanguageHandler(lang)">
+        {{ lang }}
+      </button>
+    </li>
+    }
+  </ul>
+</div>
