--- a/src/styles/buttons.scss
+++ b/src/styles/buttons.scss
@@ -8,4 +8,8 @@ button {
   cursor: pointer;
   border-radius: 1.2rem;
   transition: background-color 0.3s;
+
+  &:hover {
+    background-color: var(--info);
+  }
 }
