--- a/src/styles/links.scss
+++ b/src/styles/links.scss
@@ -14,3 +14,23 @@
     color: var(--primary);
   }
 }
+
+.admin-panel-link {
+  color: var(--white);
+  text-decoration: none;
+  font-weight: 700;
+  font-size: 1.8rem;
+  transition: color 0.3s;
+  background-color: transparent;
+  padding: 0;
+
+  &:hover {
+    text-decoration: underline;
+    color: var(--primary);
+    background-color: transparent;
+  }
+
+  &.active {
+    color: var(--primary);
+  }
+}
