--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -2,3 +2,11 @@ html {
   font-size: 62.5%;
   line-height: 1.4;
 }
+
+.color-danger {
+  color: var(--danger);
+
+  &:hover {
+    color: var(--black);
+  }
+}
