Add page wraper. Stylized article page.

--- a/src/app/layout/page/page.component.html
+++ b/src/app/layout/page/page.component.html
@@ -1,5 +1,11 @@
-<app-header />
+<app-header [paramNodeId]="paramNodeId()" />
 
 <main>
-  <ng-content />
+  <div class="page">
+    <ng-content select="top-content" />
+
+    <div class="wrap">
+      <ng-content />
+    </div>
+  </div>
 </main>
