--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,6 +4,7 @@
 @import "./styles/buttons.scss";
 @import "./styles/typography.scss";
 @import "./styles/breakpoints.scss";
+@import "./styles/layout.scss";
 
 body {
   font-family: "Ysabeau", "Roboto", sans-serif;
