Stylized article admin panel

--- a/src/app/admin/admin-tools/admin-tools.component.html
+++ b/src/app/admin/admin-tools/admin-tools.component.html
@@ -6,7 +6,7 @@
   <a [routerLink]="['/admin', 'node', paramNodeId()]" class="admin-panel-link"
     >Edit</a
   >
-  <button (click)="onDeleteArticle()" class="admin-panel-link color-danger">
+  <button (click)="onDeleteArticle()" class="admin-panel-link btn btn--danger">
     Delete
   </button>
 </div>
