--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -8,7 +8,7 @@
     <a routerLink="/admin" class="header-link" routerLinkActive="active"
       >Admin Panel</a
     >
-    <button (click)="onLogout()">Logout</button>
+    <button class="btn" (click)="onLogout()">Logout</button>
     }
     <app-lang-switcher />
     <app-close-button class="close-button" (click)="onCloseNavMenu()" />
