--- a/src/app/layout/page/page.component.html
+++ b/src/app/layout/page/page.component.html
@@ -4,7 +4,7 @@
   <div class="page">
     <ng-content select="top-content" />
 
-    <div class="wrap">
+    <div class="wrap main-content">
       <ng-content />
     </div>
   </div>
