--- a/src/app/pages/article/article.component.scss
+++ b/src/app/pages/article/article.component.scss
@@ -79,3 +79,12 @@
     border-radius: 2rem;
   }
 }
+
+.post {
+  & img {
+    max-width: 100%;
+    height: auto;
+    margin-inline: auto;
+    display: block;
+  }
+}
