--- a/src/app/admin/tags-manager/edit-tag-form/edit-tag-form.component.html
+++ b/src/app/admin/tags-manager/edit-tag-form/edit-tag-form.component.html
@@ -1,11 +1,19 @@
 <form (ngSubmit)="editTag()">
-    @for (lang of langList(); track $index) {
-        <div class="form-group">
-            <label for="tagLabel{{ lang }}">Tag name <span>{{ lang }}</span>*</label>
-            <input type="text" class="form-control" name="tagLabel{{ lang }}" [(ngModel)]="tagTranslations[lang]" >
-        </div>
-    }
-    <div class="form-group">
-        <button type="submit" class="btn btn-primary">Edit tag</button>
-    </div>
+  @for (lang of langList(); track $index) {
+  <div class="form-group">
+    <label for="tagLabel{{ lang }}"
+      >Tag name <span>{{ lang }}</span
+      >*</label
+    >
+    <input
+      type="text"
+      class="form-control"
+      name="tagLabel{{ lang }}"
+      [(ngModel)]="tagTranslations[lang]"
+    />
+  </div>
+  }
+  <div class="form-group">
+    <button type="submit" class="btn">Edit tag</button>
+  </div>
 </form>
