--- a/src/app/admin/tags-manager/tag-list-item/tag-list-item.component.html
+++ b/src/app/admin/tags-manager/tag-list-item/tag-list-item.component.html
@@ -1,12 +1,14 @@
 <li>
-    <span>{{ tag().id }}</span>
-    @for (lang of langList(); track lang) {
-        <span>{{ tag().label[lang] }}</span>
-    }
-    <button type="button" class="btn btn-danger" (click)="onDeleteTag()">Delete</button>
-    <button type="button" class="btn btn-primary" (click)="onOpenEditor()">Edit</button>
+  <span>{{ tag().id }}</span>
+  @for (lang of langList(); track lang) {
+  <span>{{ tag().label[lang] }}</span>
+  }
+  <button type="button" class="btn btn--danger" (click)="onDeleteTag()">
+    Delete
+  </button>
+  <button type="button" class="btn" (click)="onOpenEditor()">Edit</button>
 
-    @if (isEditorOpened()) {
-        <app-edit-tag-form [tag]="tag()" (onEditTag)="onOpenEditor()" />
-    }
+  @if (isEditorOpened()) {
+  <app-edit-tag-form [tag]="tag()" (onEditTag)="onOpenEditor()" />
+  }
 </li>
