--- a/src/app/blog/create-article/create-article.component.html
+++ b/src/app/blog/create-article/create-article.component.html
@@ -1,15 +1,29 @@
 <form [formGroup]="form" (ngSubmit)="onSubmit()">
-    <div class="form-group">
-        <label for="title">Title</label>
-        <input type="text" class="form-control" name="title" formControlName="title">
-    </div>
-    <div class="form-group">
-        <label for="content">Content</label>
-        <textarea class="form-control" name="content" formControlName="content"></textarea>
-    </div>
-    <div class="form-group">
-        <label for="author">Page Hero Image</label>
-        <input type="file" name="image" (change)="onFileSelected($event)" required />
-    </div>
-    <button type="submit" class="btn btn-primary">Create article</button>
+  <div class="form-group">
+    <label for="title">Title</label>
+    <input
+      type="text"
+      class="form-control"
+      name="title"
+      formControlName="title"
+    />
+  </div>
+  <div class="form-group">
+    <label for="content">Content</label>
+    <textarea
+      class="form-control"
+      name="content"
+      formControlName="content"
+    ></textarea>
+  </div>
+  <div class="form-group">
+    <label for="author">Page Hero Image</label>
+    <input
+      type="file"
+      name="image"
+      (change)="onFileSelected($event)"
+      required
+    />
+  </div>
+  <button type="submit" class="btn">Create article</button>
 </form>
