--- a/src/app/lang-switcher/lang-switcher.component.html
+++ b/src/app/lang-switcher/lang-switcher.component.html
@@ -5,7 +5,10 @@
   <ul class="lang-switcher__list" [class.open]="openSwitcher()">
     @for (lang of langSwitcherService.langList; track lang) {
     <li class="lang-switcher__item">
-      <button class="lang-switcher__btn" (click)="changeLanguageHandler(lang)">
+      <button
+        class="btn lang-switcher__btn"
+        (click)="changeLanguageHandler(lang)"
+      >
         {{ lang }}
       </button>
     </li>
