--- a/src/app/lang-switcher/lang-switcher.component.scss
+++ b/src/app/lang-switcher/lang-switcher.component.scss
@@ -58,7 +58,7 @@
     text-align: center;
   }
 
-  &__btn {
+  button.lang-switcher__btn {
     padding: 0;
     background-color: transparent;
     transition: color 0.3s;
