--- a/src/app/pages/article-admin/article-admin.component.scss
+++ b/src/app/pages/article-admin/article-admin.component.scss
@@ -1,4 +1,13 @@
-.img {
-  width: 50px;
-  height: auto;
+.img-list {
+  &__item {
+    display: flex;
+    gap: 1rem;
+    margin-bottom: 1rem;
+  }
+
+  &__img {
+    width: 50px;
+    height: 50px;
+    object-fit: cover;
+  }
 }
