--- a/src/app/user/signup-form/signup-form.component.html
+++ b/src/app/user/signup-form/signup-form.component.html
@@ -1,11 +1,21 @@
 <form [formGroup]="form" (ngSubmit)="onSubmit()">
-    <div class="form-group">
-        <label for="email">Email</label>
-        <input type="email" class="form-control" name="email" formControlName="email">
-    </div>
-    <div class="form-group">
-        <label for="password">Password</label>
-        <input type="password" class="form-control" name="password" formControlName="password">
-    </div>
-    <button type="submit" class="btn btn-primary">Sing Up</button>
+  <div class="form-group">
+    <label for="email">Email</label>
+    <input
+      type="email"
+      class="form-control"
+      name="email"
+      formControlName="email"
+    />
+  </div>
+  <div class="form-group">
+    <label for="password">Password</label>
+    <input
+      type="password"
+      class="form-control"
+      name="password"
+      formControlName="password"
+    />
+  </div>
+  <button type="submit" class="btn">Sing Up</button>
 </form>
