--- a/src/app/admin/tags-manager/tags-manager.component.html
+++ b/src/app/admin/tags-manager/tags-manager.component.html
@@ -1,7 +1,9 @@
 <app-add-tag-form />
 
-<ul>
-    @for (tag of tags(); track tag.id) {
-        <app-tag-list-item [tag]="tag" [langList]="langList()" />
-    }
+<h3>Tags:</h3>
+
+<ul class="list">
+  @for (tag of tags(); track tag.id) {
+  <app-tag-list-item [tag]="tag" [langList]="langList()" />
+  }
 </ul>
