--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,6 +5,7 @@
 @import "./styles/typography.scss";
 @import "./styles/breakpoints.scss";
 @import "./styles/layout.scss";
+@import "./styles/form.scss";
 
 body {
   font-family: "Ysabeau", "Roboto", sans-serif;
