--- a/src/app/user/login-form/login-form.component.html
+++ b/src/app/user/login-form/login-form.component.html
@@ -1,21 +1,23 @@
 <form [formGroup]="form" (ngSubmit)="onSubmit()">
   <div class="form-group">
-    <label for="email">Email</label>
+    <label class="label" for="email">Email</label>
     <input
       type="email"
-      class="form-control"
+      class="form-control input"
       name="email"
       formControlName="email"
     />
   </div>
   <div class="form-group">
-    <label for="password">Password</label>
+    <label class="label" for="password">Password</label>
     <input
       type="password"
-      class="form-control"
+      class="form-control input"
       name="password"
       formControlName="password"
     />
   </div>
-  <button type="submit" class="btn">Login</button>
+  <div class="form-group">
+    <button type="submit" class="btn">Login</button>
+  </div>
 </form>
