--- a/src/app/blog/blog-list/blog-list.component.html
+++ b/src/app/blog/blog-list/blog-list.component.html
@@ -1,5 +1,5 @@
-<ul>
-    @for (article of articlesList(); track article.id) {
-        <app-article-preview [article]="article" />
-    }
+<ul class="list">
+  @for (article of articlesList(); track article.id) {
+  <li class="article" appArticlePreview [article]="article"></li>
+  }
 </ul>
