Stylized article list

--- a/src/app/blog/blog-list/article-preview/article-preview.component.html
+++ b/src/app/blog/blog-list/article-preview/article-preview.component.html
@@ -1,6 +1,12 @@
+@if (simple()) {
+<a class="link-simple" [routerLink]="['/blog', article().id]">
+  <span>{{ articleDate() }} </span> <span>{{ articleTitle() }}</span>
+</a>
+} @else {
 <a class="article__link" [routerLink]="['/blog', article().id]">
   <img class="article__img" [src]="articleImg()" [alt]="articleTitle()" />
   <div class="article__txt">
     <h2 class="article__title">{{ articleTitle() }}</h2>
   </div>
 </a>
+}
