--- a/src/app/pages/admin-panel/admin-panel.component.html
+++ b/src/app/pages/admin-panel/admin-panel.component.html
@@ -5,5 +5,5 @@
 
   <app-tags-manager />
 
-  <app-blog-list [isAdminAccess]="true" />
+  <app-blog-list [isAdminAccess]="true" [simple]="true" />
 </app-page>
