--- a/src/app/blog/blog-list/blog-list.component.scss
+++ b/src/app/blog/blog-list/blog-list.component.scss
@@ -1,3 +1,5 @@
+@import "../../../styles/breakpoints.scss";
+
 .list {
   list-style: none;
   padding-left: 0;
@@ -5,4 +7,15 @@
   flex-direction: column;
   align-items: center;
   gap: 4rem;
+}
+
+.article {
+  display: block;
+  border-radius: 1rem;
+  box-shadow: 0 0 5px 0px lightslategray;
+  width: 100%;
+
+  @include tab {
+    max-width: 60rem;
+  }
 }
