Add rotor banner

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,9 +1,5 @@
 <app-page>
-  <h1
-    i18n="site header|An introduction header for this sample@@homepage.headline"
-  >
-    Home page
-  </h1>
+  <app-rotor-banner ngProjectAs="top-content"></app-rotor-banner>
 
   <app-blog-list />
 </app-page>
