--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,6 +6,7 @@
 @import "./styles/breakpoints.scss";
 @import "./styles/layout.scss";
 @import "./styles/form.scss";
+@import "@splidejs/splide/css";
 
 body {
   font-family: "Ysabeau", "Roboto", sans-serif;
