--- a/src/styles/palette.scss
+++ b/src/styles/palette.scss
@@ -8,6 +8,8 @@
   --light: #f8f9fa;
   --dark: #343a40;
   --transparent-dark: rgba(0, 0, 0, 0.9);
+  --transparent-medium: rgba(0, 0, 0, 0.5);
+  --transparent-light: rgba(0, 0, 0, 0.2);
   --white: #fff;
   --black: #000;
 }
