--- a/src/app/layout/header/header.component.scss
+++ b/src/app/layout/header/header.component.scss
@@ -28,7 +28,7 @@ nav {
     flex-direction: row;
     padding: 0;
     background-color: transparent;
-    justify-content: space-between;
+    justify-content: flex-end;
     min-width: 80%;
   }
 }
