--- a/src/app/pages/auth/auth.component.html
+++ b/src/app/pages/auth/auth.component.html
@@ -1,5 +1,5 @@
 <app-page>
-  @if (formSwitcher() === 'signup') {
+  @if (formSwitcher() === 'signup' && false) {
   <app-signup-form />
   } @else {
   <app-login-form />
