--- a/src/app/pages/home/rotor-banner/rotor-banner.component.html
+++ b/src/app/pages/home/rotor-banner/rotor-banner.component.html
@@ -8,7 +8,7 @@
             site header|An introduction header for this
             sample@@homepage.headline"
         >
-          Home page
+          Life's Secrets:<br />Montenegro & Portugal
         </h1>
       </div>
     </div>
