--- a/src/app/pages/auth/auth.component.html
+++ b/src/app/pages/auth/auth.component.html
@@ -5,7 +5,7 @@
   <app-login-form />
   }
 
-  <button class="btn" (click)="onSwitchForm()" *ngif="false">
+  <!-- <button class="btn" (click)="onSwitchForm()">
     Switch to {{ formSwitcher() === "signup" ? "login" : "signup" }}
-  </button>
+  </button> -->
 </app-page>
